--- a/g08-project/index.html
+++ b/g08-project/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>g08-roject</title>
+    <title>g08-project</title>
   </head>
   <body>
     <div id="app"></div>
